# astron-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  Makefile  NOTICE  README-zh.md  README.md
core/agent/: .dockerignore  .flake8  .gitignore  CLAUDE.md  Dockerfile  README.md  common_imports.py  config.env.example  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
core/agent/api/: app.py
core/agent/api/schemas/: agent_response.py  base_inputs.py  bot_config.py  bot_config_mgr_inputs.py  bot_config_mgr_response.py  completion.py  completion_chunk.py  llm_message.py  node_trace_patch.py  openapi_inputs.py  workflow_agent_inputs.py
core/agent/api/utils/: snowfake.py
core/agent/api/v1/: base_api.py  bot_config_mgr_api.py  openapi.py  workflow_agent.py
core/agent/cache/: redis_client.py
core/agent/domain/models/: base.py  bot_config_table.py
core/agent/engine/: workflow_agent_runner.py
core/agent/engine/nodes/: base.py
core/agent/exceptions/: __init__.py  agent_exc.py  base.py  bot_config_exc.py  codes.py  cot_exc.py  llm_codes.py  middleware_exc.py  plugin_exc.py
core/agent/infra/: __init__.py  app_auth.py
core/agent/infra/config/: __init__.py  fast_uvi.py  middleware.py  xc_utils.py
core/agent/repository/: bot_config_client.py  mysql_client.py
core/agent/scripts/: quality_check.py
core/agent/service/builder/: base_builder.py  openapi_builder.py  workflow_agent_builder.py
core/agent/service/plugin/: base.py  knowledge.py  link.py  mcp.py  workflow.py
core/agent/service/runner/: openapi_runner.py
core/agent/tests/: conftest.py  run_all_api_tests.py
core/agent/tests/fixtures/: mocks.py  test_data.py
core/agent/tests/integration/: test_bot_config_management.py  test_chat_completions_v2.py  test_custom_chat_completions.py  workflow_agent_node_test.py
core/common/: .coverage  .coveragerc  .env.example  README.md  ma-sdk.toml  pyproject.toml  pytest.ini  run_basic_tests.sh  run_simple_tests.sh  run_tests.sh
core/common/audit_system/: base.py  enums.py  orchestrator.py  utils.py
core/common/audit_system/audit_api/: base.py
core/common/audit_system/strategy/: base_strategy.py  text_strategy.py
core/common/examples/: cache.py  db.py  kafka.py  log.py  ma.py  oss.py  otlp_metric.py  otlp_sid.py  otlp_span.py  settings.py
core/common/examples/setup/: .env.example  setup_environ.py
core/common/exceptions/: base.py  codes.py  errs.py
core/common/initialize/: initialize.py
core/common/metrology_auth/: __init__.py  base.py  calc.py  conc.py  config_client.toml.findercache  errors.py  licc.py  ma-sdk-default.toml  ma_sdk_linux_x64.h  ma_sdk_macos_arm64.h  ma_sdk_windows.h  rep.py
core/common/metrology_auth/include/: ma_sdk.h
core/common/metrology_auth/ma-sdk-cfg/: config_ma-sdk.toml.findercache  service_janus_1.0.0.findercache
core/common/otlp/: ip.py  sid.py
core/common/otlp/args/: __init__.py  base.py  metric.py  sid.py  trace.py
core/common/otlp/log_trace/: base.py  node_log.py  node_trace_log.py  workflow_log.py
core/common/otlp/metrics/: consts.py  meter.py  metric.py
core/common/otlp/trace/: span.py  trace.py
core/common/service/: __init__.py  base.py  utils.py
core/common/service/cache/: base_cache.py  factory.py  redis_cache.py
core/common/service/db/: db_service.py  factory.py
core/common/service/kafka/: factory.py  kafka_service.py
core/common/service/log/: factory.py  logger_service.py
core/common/service/ma/: factory.py  metrology_auth_service.py
core/common/settings/: polaris.py  settings.py
core/common/tests/: README.md  __init__.py  conftest.py  test_audit_system.py  test_exceptions.py  test_initialize.py  test_json_schema_cn.py  test_json_schema_validator.py  test_main.py  test_metrology_auth.py  test_otlp_args.py  test_otlp_ip.py  test_otlp_log_trace.py  test_otlp_sid.py  test_otlp_span.py  test_otlp_utils.py  test_service_base.py  test_service_utils.py  test_snowfake.py  test_utils.py
core/common/utils/: hmac_auth.py  snowfake.py
core/knowledge/: Dockerfile  README.md  config.env  main.py  pyproject.toml
core/knowledge/api/: __init__.py
core/knowledge/api/v1/: api.py  (+1 more)
core/knowledge/consts/: __init__.py  constants.py  error_code.py
core/knowledge/domain/: __init__.py  response.py  response_test.py
core/knowledge/exceptions/: __init__.py  exception.py  exception_test.py
core/knowledge/infra/: __init__.py
core/knowledge/service/: __init__.py  rag_strategy.py  rag_strategy_factory.py
core/knowledge/utils/: __init__.py  file_utils.py  spark_signature.py  verification.py
core/memory/database/: Dockerfile  README.md  config.env  main.py  pyproject.toml
core/plugin/aitools/: .gitignore  Dockerfile  config.env  conftest.py  main.py  pyproject.toml  pytest.ini  test_individual_modules.py
core/plugin/link/: .gitignore  Dockerfile  __init__.py  config.env  main.py  pyproject.toml  pytest.ini
core/plugin/plugin/: pyproject.toml
core/plugin/rpa/: .flake8  .gitignore  Dockerfile  config.env  conftest.py  main.py  pyproject.toml  pytest.ini  run_tests.py
core/workflow/: .gitignore  Dockerfile  __init__.py  config.env  main.py  pyproject.toml
core/workflow/api/: __init__.py
core/workflow/cache/: __init__.py  app.py  engine.py  event_registry.py  flow.py  license.py
core/workflow/configs/: __init__.py  app_config.py
core/workflow/consts/: __init__.py  app_audit.py  comparisons.py  database.py  flow.py  runtime_env.py  template.py  tenant_publish_matrix.py  tool_type.py
core/workflow/engine/: dsl_engine.py  node.py
core/workflow/exception/: __init__.py  e.py  e_test.py  handlers.py
core/workflow/extensions/: ext_log.py  ext_log_test.py
core/workflow/repository/: flow_dao.py  license_dao.py
core/workflow/service/: app_service.py  audit_service.py  auth_service.py  chat_service.py  file_service.py  flow_service.py  history_service.py  license_service.py  ops_service.py  publish_service.py
core/workflow/sql/: workflow.sql
core/workflow/tests/: pytest.ini
core/workflow/utils/: __init__.py  file_util.py  snowfake.py
(+4663 files in other folders)
