[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.15",
    "black==24.4.2",
    "boto3>=1.40.55",
    "confluent-kafka==2.5.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "flake8==7.0.0",
    "googleapis-common-protos==1.60.0",
    "grpc-google-iam-v1==0.12.6",
    "isort==5.13.2",
    "loguru==0.7.2",
    "mypy>=1.18.1",
    "openapi-schema-pydantic==1.2.4",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-opencensus==0.46b0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0",
    "opentelemetry-proto==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-semantic-conventions==0.46b0",
    "pydantic==2.9.2",
    "pydantic-settings==2.10.1",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dotenv==1.0.1",
    "python-multipart>=0.0.20",
    "ragflow-sdk==0.13.0",
    "redis==3.5.3",
    "redis-py-cluster==2.1.3",
    "requests-toolbelt==1.0.0",
    "sqlmodel>=0.0.25",
    "toml>=0.10.2",
    "typing-extensions>=4.15.0",
    "uvicorn~=0.34.2",
    "websocket-client==1.8.0",
]

[tool.uv.sources]
