[project]
name = "workflow"
version = "1.0.0"
description = "workflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.4.3 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "aiohttp==3.10.10 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "aiosignal==1.3.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "annotated-types==0.7.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "anyio==4.4.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "appdirs==1.4.4 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "attrs==23.2.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "boto3>=1.40.22",
    "certifi==2024.7.4 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "charset-normalizer==3.3.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "click==8.1.7 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "colorama==0.4.6 ; python_full_version >= '3.11' and python_full_version < '4.0' and sys_platform == 'win32'",
    "confluent-kafka==2.5.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "deprecated==1.2.14 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "dnspython==2.6.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "email-validator==2.2.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "fastapi==0.111.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "fastapi-cli==0.0.4 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "frozenlist==1.5.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "googleapis-common-protos==1.60.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "greenlet==3.0.3 ; (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'AMD64') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'WIN32') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'aarch64') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'amd64') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'ppc64le') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'win32') or (python_full_version >= '3.11' and python_full_version < '3.13' and platform_machine == 'x86_64')",
    "grpcio==1.64.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "h11==0.14.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "httpcore==1.0.5 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "httptools==0.6.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "httpx==0.27.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "idna==3.7 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "importlib-metadata==7.1.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "iniconfig==2.0.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "jinja2==3.1.4 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "jsonschema==4.23.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "jsonschema-specifications==2023.12.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "langchain-sandbox>=0.0.6",
    "loguru==0.7.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "markdown-it-py==3.0.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "markupsafe==2.1.5 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "mdurl==0.1.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "multidict==6.1.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "openai==1.60.2",
    "opencensus-proto==0.1.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-api==1.25.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-exporter-opencensus==0.46b0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-exporter-otlp==1.25.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-exporter-otlp-proto-common==1.25.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-exporter-otlp-proto-http==1.25.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-proto==1.25.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-sdk==1.25.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "opentelemetry-semantic-conventions==0.46b0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "orjson==3.10.6 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "packaging==24.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pluggy==1.5.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "propcache==0.2.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "protobuf==3.20.3 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pydantic==2.9.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pydantic-core==2.23.4 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pygments==2.18.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pymysql==1.1.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pytest==8.2.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-dotenv==1.0.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "python-multipart==0.0.9 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "pyyaml==6.0.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "redis==3.5.3 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "redis-py-cluster==2.1.3 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "referencing==0.35.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "requests==2.32.3 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "restrictedpython>=8.0",
    "rich==13.7.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "rpds-py==0.19.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "setuptools==70.3.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "shellingham==1.5.4 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "sniffio==1.3.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "snowflake-id==1.0.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "sqlalchemy==2.0.31 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "sqlmodel==0.0.19 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "starlette==0.37.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "tenacity>=9.1.2",
    "toml>=0.10.2",
    "typer==0.12.3 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "typing-extensions==4.12.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "urllib3==2.2.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "uvicorn[standard]==0.30.1 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "uvloop==0.19.0 ; python_full_version >= '3.11' and python_full_version < '4.0' and platform_python_implementation != 'PyPy' and sys_platform != 'cygwin' and sys_platform != 'win32'",
    "versioned-fastapi==1.0.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "watchfiles==0.22.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "websockets==12.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "win32-setctime==1.1.0 ; python_full_version >= '3.11' and python_full_version < '4.0' and sys_platform == 'win32'",
    "wrapt==1.16.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "yarl==1.16.0 ; python_full_version >= '3.11' and python_full_version < '4.0'",
    "zipp==3.19.2 ; python_full_version >= '3.11' and python_full_version < '4.0'",
]
