[project]
name = "database"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "black==24.4.2",
    "confluent-kafka>=2.11.1",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "flake8==7.0.0",
    "isort==5.13.2",
    "jsonschema>=4.23.0",
    "loguru>=0.7.3",
    "mypy==1.9.0",
    "openpyxl>=3.1.5",
    "opentelemetry-api==1.25.0",
    "opentelemetry-exporter-opencensus==0.46b0",
    "opentelemetry-exporter-otlp==1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.25.0",
    "opentelemetry-proto==1.25.0",
    "opentelemetry-sdk==1.25.0",
    "opentelemetry-semantic-conventions==0.46b0",
    "orjson>=3.10.18",
    "pandas>=2.3.0",
    "pydantic-settings>=2.10.1",
    "pylint==3.1.0",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "python-multipart>=0.0.20",
    "redis==3.5.3",
    "redis-py-cluster==2.1.3",
    "requests>=2.32.3",
    "snowflake>=1.4.0",
    "snowflake-id>=1.0.2",
    "sqlalchemy>=2.0.40",
    "sqlglot>=26.28.0",
    "sqlmodel>=0.0.24",
    "sqlparse>=0.5.3",
    "toml>=0.10.2",
    "uvicorn>=0.34.2",
]
