[project]
name = "aitools"
version = "1.0.0"
description = "定制工具平台服务"
authors = ["iflytek"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.2",
    "requests>=2.31.0",
    "loguru>=0.7.2",
    "python-multipart>=0.0.9",
    "pydantic>=2.7.1",
    "openai>=1.40.6",
    "aiohttp>=3.10.5",
    "pymupdf>=1.24.10",
    "pytest>=8.3.3",
    "pillow>=10.3.0",
    "feedparser>=6.0.11",
    "websocket-client>=1.8.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "xlrd>=1.2.0",
    "websockets>=12.0",
    "mcp==1.6.0",
    "exceptiongroup>=1.3.0",
    "psycopg2-binary>=2.9.10",
    "records>=0.6.0",
    "sqlglot>=26.24.0",
    "pymysql>=1.1.1",
    "oracledb>=3.1.1",
    "pymssql>=2.3.4",
    "requests-toolbelt>=1.0.0",
    "pydub>=0.25.1",
]
