[tool.poetry]
name = "spark-plugin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
requests = "^2.31.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
loguru = "^0.7.2"
python-multipart = "^0.0.9"
pydantic = "^2.7.1"
openai = "^1.40.6"
aiohttp = "^3.10.5"
pymupdf = "1.24.10"
pytest = "8.3.3"
pillow = "10.3.0"
feedparser = "6.0.11"
websocket-client = "1.8.0"
python-docx = "1.1.2"
openpyxl = "3.1.5"
beautifulsoup4 = "4.12.3"
lxml = "5.3.0"
xlrd = "1.2.0"
websockets = "12.0"
xingchen_utils = {url="https://depend.iflytek.com:443/artifactory/pypi-private/xingchen_utils/1.0.1/xingchen_utils-1.0.1-py3-none-any.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
