[project]
name = "xingchen-rpa-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "sse-starlette>=3.0.2",
    "types-appdirs>=1.4.3.5",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.35.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "httpx[test]>=0.28.1",
    "factory-boy>=3.3.0",
]
