[project]
name = "xingchen-rpa-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appdirs>=1.4.4",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "orjson>=3.11.3",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "sse-starlette>=3.0.2",
    "types-appdirs>=1.4.3.5",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.35.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "factory-boy>=3.3.0",
    "toml>=0.10.2",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.37.0",
    "opentelemetry-proto>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-semantic-conventions>=0.58b0",
    "opentelemetry-exporter-opencensus>=0.31b0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "grpc-google-iam-v1>=0.14.2",
    "googleapis-common-protos>=1.70.0",
    "websocket-client>=1.8.0",
    "python-dotenv>=1.1.1",
    "confluent-kafka>=2.11.1",
    "pydantic-settings>=2.10.1",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.25",
    "redis==3.5.3",
    "redis-py-cluster==2.1.3",
]
